-------------------------------------------------------------------------------
  Version 20180314 (2018-03-14)
-------------------------------------------------------------------------------
  * Added webmin to cli desktop installation list

-------------------------------------------------------------------------------
  Version 20180312 (2018-03-12)
-------------------------------------------------------------------------------
  * Removing leafpad from lxqt installation, due notepadqq is installed

-------------------------------------------------------------------------------
  Version 20180305 (2018-03-05)
-------------------------------------------------------------------------------
  * Removing pavucontrol from lxqt installation, due pavucontrol-qt is installed

-------------------------------------------------------------------------------
  Version 20171207 (2017-12-07)
-------------------------------------------------------------------------------
  * Small fix

-------------------------------------------------------------------------------
  Version 20171008 (2017-10-08)
-------------------------------------------------------------------------------
  * Remove Qt5 config from /etc/environment of KDE and LXQt installtions

-------------------------------------------------------------------------------
  Version 20170906 (2017-09-06)
-------------------------------------------------------------------------------
  * Removed deepin desktop from the installation list

-------------------------------------------------------------------------------
  Version 20170822 (2017-08-21)
-------------------------------------------------------------------------------
  * Removed Pantheon desktop from the installation list

-------------------------------------------------------------------------------
  Version 20170821 (2017-08-21)
-------------------------------------------------------------------------------