@@ -1,0 +1,50 @@
+# English localization file for Sparky Backup Desktop.
+# Copyright 2018 Paweł "pavroo" Pijanowski <pavroo@onet.eu> 2018/03/26
+# Under the GNU GPL v2
+# Last update 2018/03/26 by pavroo
+LOCAL1="Internet connection test failed!"
+LOCAL2="On-line instalation of an additional desktop can NOT be done!"
+LOCAL3="Exiting now..."
+LOCAL4="Please select a desktop you would like to install."
+LOCAL5="Dynamic Window Manager"
+LOCAL6="Tiling Window Manager"
+LOCAL7="Budgie Desktop"
+LOCAL8="Common Desktop Environment"
+LOCAL9="GTK+ based Desktop Environment"
+LOCAL10="Compositing and stacking Window Manager"
+LOCAL11="Stacking Window Manager"
+LOCAL12="Flashback session of the GNOME Desktop Environment"
+LOCAL13="GNOME Shell session of the GNOME Desktop Environment"
+LOCAL14="Dynamic tiling Window Manager"
+LOCAL15="KDE Plasma 5 Desktop Environment"
+LOCAL16="Lightweight system interface for any Unix-like OS"
+LOCAL17="Lightweight X11 Desktop Environment"
+LOCAL18="Lightweight Qt Desktop Environment"
+LOCAL19="MATE Desktop Environment"
+LOCAL20="Lightweight and very configurable window manager"
+LOCAL21="Trinity Desktop Environment"
+LOCAL22="Web-based interface for system admins"
+LOCAL23="Window Manager for the X Window System"
+LOCAL24="Lightweight Desktop Environment"
+LOCAL25="Quit the Desktop Installer"
+LOCAL26="Quitting the Desktop Installer now..."
+LOCAL27="The live system provides Midori (MinimalGUI) and ELinks (MinimalCLI) web browser as default."
+LOCAL28="If you would like to install different web browser, simply choose a one from the list."
+LOCAL29="Open-source Chromium web browser"
+LOCAL30="Small and fast web browser"
+LOCAL31="Secure and open source web browser"
+LOCAL32="GNOME web browser"
+LOCAL33="Web browser from Mozilla"
+LOCAL34="The GNU version of the Firefox web browser"
+LOCAL35="Web browser and file manager for KDE"
+LOCAL36="Fast and lightweight graphical web browser"
+LOCAL37="Small and fast multi-platform web browser"
+LOCAL38="Free and open-source web browser"
+LOCAL39="Firefox-based, efficient and easy to use web browser"
+LOCAL40="Lightweight web browser based on libqtwebkit"
+LOCAL41="Free and open-source internet suite"
+LOCAL42="Free web browser based on Chromium"
+LOCAL43="TOR Anonymity Network app and a web browser"
+LOCAL44="Freeware web browser from Vivaldi Technologies"
+LOCAL45="Do NOT change web browser"
+LOCAL46="A web browser will be NOT changed."
