@@ -1,0 +1,50 @@
+# Polish localization file for Sparky Backup Desktop.
+# Copyright 2018 Paweł "pavroo" Pijanowski <pavroo@onet.eu> 2018/03/26
+# Under the GNU GPL v2
+# Last update 2018/03/26 by pavroo
+LOCAL1="Połączenie z internetem nieudane!"
+LOCAL2="Instalacja on-line innego pulpitu NIE może być przeprowadzona!"
+LOCAL3="Kończenie..."
+LOCAL4="Proszę wybrać pulpit, który chcesz zainstalować."
+LOCAL5="Dynamiczny Menadżer Okien"
+LOCAL6="Kafelkowy Menadżer Okien"
+LOCAL7="Pulpit Budgie"
+LOCAL8="Common Desktop Environment"
+LOCAL9="Bazujące na GTK+ Środowisko Graficzne"
+LOCAL10="Stosowy i Kompozycji Menadżer Okien"
+LOCAL11="Stosowy Menadżer Okien"
+LOCAL12="Sesja Flashback Środowiska Graficznego GNOME"
+LOCAL13="Sesja GNOME Shell Średowiska Graficznego GNOME"
+LOCAL14="Dynamiczny, Kafelkowy Menadżer Okien"
+LOCAL15="Środowisko Graficzne KDE Plasma 5"
+LOCAL16="Lekki systemowy interfejs dla Unix-owych OS-ów"
+LOCAL17="Lekkie Środowisko Graficzne X11"
+LOCAL18="Lekkie Środowisko Graficzne Qt"
+LOCAL19="Środowisko Graficzne MATE"
+LOCAL20="Lekki i wysoce konfigurowalny Menadżer Okien"
+LOCAL21="Środowisko Graficzne Trinity"
+LOCAL22="Webowy interfejs dla adminów systemowych"
+LOCAL23="Menadżer Okien dla Systemu X Window"
+LOCAL24="Lekkie Środowisko Graficzne"
+LOCAL25="Opuść Instalator Pulpitów"
+LOCAL26="Wyjście z Instalatora Pulpitów..."
+LOCAL27="System live domyślnie dostarcza przeglądarkę www Midori (MinimalGUI) oraz ELinks (MinimalCLI)."
+LOCAL28="Jeśli chcesz zainstalować inną przeglądarkę www, wybierz ją z listy."
+LOCAL29="Otwarto źródłowa przeglądarka www Chromium"
+LOCAL30="Mała i szybka przeglądarka www"
+LOCAL31="Bezpieczna i otwarto źródłowa przeglądarka www"
+LOCAL32="Przeglądarka www GNOME"
+LOCAL33="Przeglądarka www od Mozilla"
+LOCAL34="Wersja GNU przeglądarki www Firefox"
+LOCAL35="Przeglądarka www i menadżer plików dla KDE"
+LOCAL36="Szybka i lekka, graficzna przeglądarka www"
+LOCAL37="Mała i szybka, wieloplatformowa przeglądarka www"
+LOCAL38="Bezpłatna i otwarto źródłowa przeglądarka www"
+LOCAL39="Bazująca na Firefox, efektywna i prosta przeglądarka www"
+LOCAL40="Lekka przeglądarka www bazująca na libqtwebkit"
+LOCAL41="Bezpłatny i otwarto źródłowy pakiet internetowy"
+LOCAL42="Bezpłatna przeglądarka www bazująca na Chromium"
+LOCAL43="Aplikacja anonimowej sieci TOR i przeglądarka www"
+LOCAL44="Bezpłatna przeglądarka www od Vivaldi Technologies"
+LOCAL45="NIE zmieniaj przeglądarki www"
+LOCAL46="Przeglądarka www NIE będzie zmieniona."
