@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20180326 (2018-03-26)
+-------------------------------------------------------------------------------
+  * Added localization
+
+-------------------------------------------------------------------------------
   Version 20180314 (2018-03-14)
 -------------------------------------------------------------------------------
   * Added webmin to cli desktop installation list
